fix: remove Java 23+ javaOpt from CI scripts (incompatible with Java 17)
--sun-misc-unsafe-memory-access=allow is unrecognized on Java 17 and
crashes the JVM. CI runs on Java 17 so remove from conformance/run.sc
and compiler/project.scala. examples/run-all.sc is local-only (Java 25).

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>